src/test/ui/const-generics/issues/issue-61935.min.stderr
error: generic parameters must not be used inside const evaluations
  --> $DIR/issue-61935.rs:10:23
   |
LL |         Self:FooImpl<{N==0}>
   |                       ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments `N`

error: aborting due to previous error

